# tandem_mani

./: .gitignore  README.md  start.launch  start.sh
src/: README.md
src/arm-control/arm_controllers/src/: computed_torque_controller.cpp  gravity_comp_controller.cpp
src/arm-control/elfin/elfin_description/urdf/: elfin_robot.gazebo  ti5.urdf.xacro  ti5_robot.gazebo  ti5_transmission.xacro
src/arm-control/elfin/elfin_gazebo/config/: computed_torque_controller.yaml  gravity_comp_controller.yaml
src/arm-control/elfin/elfin_gazebo/launch/: elfin3_empty_world.launch
src/can_communication/: CMakeLists.txt  package.xml
src/can_communication/include/: can_motor.h
src/can_communication/msg/: MotorPosTar.msg  MotorSpdTar.msg
src/can_communication/src/: Motor_MS.c  Motor_Mode_Set.cpp  Motor_PID_Set.cpp  Motor_Pos_Tar.cpp  Motor_Spd_Tar.cpp  can_motor.cpp  can_motor.h  can_node.cpp
src/can_communication/srv/: MotorPIDSet.srv
src/hexarotor_mani/: CMakeLists.txt  package.xml
src/hexarotor_mani/src/: hexarotor_mani_client.cpp  hexarotor_mani_command.cpp  hexarotor_mani_controller.cpp  hexarotor_mani_server.cpp
src/my_gazebo_plugin/: CMakeLists.txt  package.xml
src/my_gazebo_plugin/src/: motor_model.cpp  motor_plugin.cpp  my_gazebo_plugin.cpp
src/tandem_control/: CMakeLists.txt  package.xml
src/tandem_control/config/: tandem_control.yaml
src/tandem_control/launch/: tandem_control.launch  tandem_rqt.launch
src/tandem_control/scripts/: getPos.py
src/tandem_control/src/: end_point_position.cpp  fk.cpp  floating_platform.cpp  gripper_robot_controller.cpp  gripper_robot_trajectory_action_client.cpp  gripper_robot_trajectory_action_server.cpp  kpkv_serviceClient.cpp  main.cpp  manipulator_IDynamic.h  manipulator_control.h  manipulator_kinematic.h  record_bag_node.cpp  tandem_control_client.cpp  tandem_control_controller.cpp  tandem_control_server.cpp  text  text.cpp
src/tandem_mani/: CMakeLists.txt  package.xml
src/tandem_mani/launch/: display.launch  gazebo.launch
src/tandem_mani/meshes/: base_link.STL  base_link_no_collision.STL  end_point.STL  link1_no_collision.STL  link2.STL  link3.STL  link3_no_collision.STL  link4.STL  link4_no_collision.STL  link5.STL
src/tandem_mani/urdf/: model.config  tandem.gazebo  tandem_mani.csv  tandem_mani.sdf  tandem_mani.urdf  tandem_mani.urdf.xacro  tandem_mani1.urdf  tandem_mani_fix.sdf  tandem_mani_fix.urdf  tandem_mani_no_collision.urdf
src/tandem_mani/world/: empty.world
src/tandem_mani/worlds/: tandem_mani.world
src/tandem_mani_1/: CMakeLists.txt  package.xml
src/tandem_mani_1/launch/: display.launch  gazebo.launch
src/tandem_mani_1/urdf/: tandem_mani_1.urdf
src/vicon_mav/: CMakeLists.txt  package.xml
src/vicon_mav/launch/: vicon_mav.launch
src/vicon_mav/src/: vicon_px4.cpp
